Extract ReplLibrary (#135), remove unneeded java plugin in build scripts